--- a/VRChat/62/1083362.html
+++ b/VRChat/62/1083362.html
@@ -76,9 +76,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "AQc8fjOvkLOjlLe98BjAz7KqFdeWuf2jdFT3rjOnMe0="></script>
+    "VfLKANgPhCJKfdaj0O76MfCtRMI5V+gSaaCgDt09Ir4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"あたご型護衛艦 汎用3Dモデル (fbx/mqo/ソース付きVRChat対応)","description":"このパックは日本国海上自衛隊のあたご型イージス護衛艦の3Dモデル(fbx・mqo)とVRchatアバター向けモデル及び\nそれらの制作に使用したソースファイルが同封されています。\nこのモデルは将来的にクオリティアップのためにリメイクする可能性があります。\nその際はこの商品自体を価格はそのままにアップグレードしますので安心してお求めください。\n\n※海上自衛隊艦船の3Dモデル製作販売及びゲームAssetとしての利用については当モデルの販売時に自衛隊京都地方協力本部へ問い合わせの上、問題ないという回答を頂いております。\n\nUnityAssetStoreでは割高になりますがDemoScene入りのAssetも販売しています。\n*BOOTH版にもDemoScene入りました。詳細は後述。\n\u003c\u003c注意\u003e\u003e\nVRChat向けモデルにはボーン設定やマテリアル設定が含まれていませんので、お客様側で設定していただく形となります。\n\n主に以下の用途向けに制作しました:\n*3DCG動画に於けるストラクチャーとしての使用。\n*自作ゲーム用のオブジェクトとしての使用。\n*VRChat等に於けるアバターとしての活用及びオブジェとしての使用。\n\nまた各種仕様は以下の通りです。\n\n-汎用モデルポリゴン数:25802(三角面)\n-VRChat向けポリゴン数:19951(三角面)\n-テクスチャ:アルベド5種メタリック1種\n-砲塔やスクリュー、舵などの可動を前提とした別Objectとなっています。\n\nその他利用規約を熟読の上ご利用願います。","url":"https://booth.pm/ja/items/1083362","offers":{"priceCurrency":"JPY","@type":"Offer","price":"2200"},"image":"https://booth.pximg.net/c/620x620/9a721b57-1096-42bb-af4f-448df51055c5/i/1083362/a9a15d3f-1162-401c-af77-737740968f5c_base_resized.jpg"}
     </script>
@@ -86,16 +86,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="AQc8fjOvkLOjlLe98BjAz7KqFdeWuf2jdFT3rjOnMe0="></script>
+    nonce="VfLKANgPhCJKfdaj0O76MfCtRMI5V+gSaaCgDt09Ir4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -123,6 +120,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -137,7 +136,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -180,7 +180,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1083362/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               119
@@ -195,14 +195,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1083362/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               119
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
