--- a/VRChat/56/1083056.html
+++ b/VRChat/56/1083056.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "9UwWBrtSVQL1PF4c6g/ceyCaFbrje+QHQ2EUPQq7V2c="></script>
+    "28xj1/RuSyHNGX0UGEB7tx59UcUNC7p43qBBv0i0xpk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"\"L\"Pad Pro 3Dモデル","description":"”L”Pad Pro 3Dモデルの紹介\n\n\n本モデルは【VRChat】向けに作成したLPad Proです。\nケーキ工房お手製の新作タブレットになります♪♪\n\n\n液晶部分にはお好きなテクスチャを設定いただけます。\n(GIMPを使って簡単に設定できます。)\n\n●内容物\n\n・lPad Pro.unitypackage\n・FBXデータ,Blenderファイル,UVファイル(png)\n・GIMP用ファイル(.xcf),テンプレテクスチャ\n・Readme\n\n\n------------------------------\n\n●利用条件\n\n・本モデルの営利利用目的は可\n・本モデルの改変は可\n\n\n●免責事項\n\n・本データを使用し、何れかの不都合が生じたとしても当方は責任を負いかねますのでご了承ください。\n\n\n■禁止事項\n\n・公序良俗に反する行為、政治・宗教活動、誹謗中傷目的での使用\n\n------------------------------\n\n貧相なモデルですが使っていただければ嬉しく思います。\n\n何かあれば下記までご連絡ください。\nTwitter:ケーキ@VRChatter(@keiki002)\nhttps://twitter.com/keiki002","url":"https://booth.pm/ja/items/1083056","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/266c358f-8e7e-41bc-bd4e-a1da54b572e7/i/1083056/659824a6-df9a-4a54-bbe0-1e5e37ba3936_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="9UwWBrtSVQL1PF4c6g/ceyCaFbrje+QHQ2EUPQq7V2c="></script>
+    nonce="28xj1/RuSyHNGX0UGEB7tx59UcUNC7p43qBBv0i0xpk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -157,7 +159,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1083056/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               123
@@ -172,14 +174,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1083056/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               123
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
