--- a/VRChat/99/1082699.html
+++ b/VRChat/99/1082699.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "j0Yw73EhhZpnP/Ulx+OeLXbJFkM1w7kml/D0NXZ/gJo="></script>
+    "5khc12RNeizgALov7mLLZnBNQaLGADrtK7GinbGvw6w="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRchat向け小物　ローポリランタン","description":"https://twitter.com/chemical_15_VR/status/1059770807545524224\n※動いているgif画像が添付されたツイートとなっています\n\n2019年8月26日更新\nメッシュを統合しました。\nマテリアルの描画順を最適化しました。\nスケールを変更すると、パーティクルのサイズが変わるようになったので、prefabファイルを一種類に統合しました。\n\n■中で炎が揺らめくランタンです。\n炎は4色あります。\n\nポリ数▽118のローポリ仕様です。\n\n■使い方\n青い四角いアイコンのファイルをヒエラルキーにドラッグアンドドロップするだけで動きます。\n\nサイズは微調整して使用することも可能です。\n\n■禁則事項\n政治的利用\n特定の信条や宗教のための使用\n公序良俗に反する行為\n再配布\nその他製作者が不適切と判断したもの\n\n■やっていい事\n改変","url":"https://booth.pm/ja/items/1082699","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/9585a184-fff0-488e-8a9d-612c758951c2/i/1082699/6382ace7-61a0-484c-961c-be7e6f4ec4bd_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="j0Yw73EhhZpnP/Ulx+OeLXbJFkM1w7kml/D0NXZ/gJo="></script>
+    nonce="5khc12RNeizgALov7mLLZnBNQaLGADrtK7GinbGvw6w="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1082699/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               378
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1082699/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               378
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
