--- a/VRChat/80/1082480.html
+++ b/VRChat/80/1082480.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "U8v65QgYqBR2ANv7nGZHVYxliO17qmNn15ywMsTnDBA="></script>
+    "UE3sP8Q2XPXFEFYW5HCb5p5ZW3Sg4fX0BYrp2Ny02uk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"（３Dモデル）お寿司","description":"特上寿司です。（▲5,448）\nまぐろ、かんぱち、ひらめ、うに、いくら、あなご、赤貝、さんま、数の子、甘エビ、かんぴょうの巻物、ガリです。\n\nvtuber動画やVRChatその他での賑やかしにご利用ください。\n\n【内容物説明】\nSushi.fbx : モデル本体です。\nSushiTex.png : テクスチャです。\nReadme.txt : 説明書です。\n\n※ 寿司１貫につき１オブジェクトです。\n※ 例外として、イクラは２オブジェクトに別れています。光沢のあるマテリアルを適用してあげてください。\n※ 見本画像でユニティちゃんトゥーンシェーダーを使用しております（１枚目）。\n\n【ご利用について】\n改変：可\n商用利用：可\n作者詐称：不可\n再配布、本データを含めた販売：不可\nVRChatなどで使用するアバターやペデスタル、ワールドへの同梱：可\n\n【免責事項】\nモデル製作者は当モデルデータを利用したことにより発生した損害、損失、その他の不利益に対して一切の責任を負いません。\n\n↓使用例↓","url":"https://booth.pm/ja/items/1082480","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/18b0699d-c344-4832-a9f1-66695f5c053b/i/1082480/cad83410-55ab-415a-b779-47f43ba6817f_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="U8v65QgYqBR2ANv7nGZHVYxliO17qmNn15ywMsTnDBA="></script>
+    nonce="UE3sP8Q2XPXFEFYW5HCb5p5ZW3Sg4fX0BYrp2Ny02uk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -141,6 +141,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -184,7 +186,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1082480/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               1186
@@ -199,14 +201,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1082480/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               1186
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
