--- a/VRChat/12/1081912.html
+++ b/VRChat/12/1081912.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "9hZFQvvMZ92mxukdq/5irFlDuCLJSXZ/I0/i5mgP5gg="></script>
+    "JpgOHLEyK12TMnseD/9ltq4JzvGxQmWlskrh3E6MuZc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"みどきち産業製タクトスイッチ","description":"本製品は気の迷いで作ったタクトスイッチから3Dモデルのみ残した無料版ですが\n製作者本人にも動かせてないのでVRChatで動かせる方は動かしかたを教えてください(切実)\n","url":"https://booth.pm/ja/items/1081912","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/2e89935f-9c79-4183-9024-0c7885265619/i/1081912/e8338d2f-af20-49d9-9e14-d221734e5cf0_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="9hZFQvvMZ92mxukdq/5irFlDuCLJSXZ/I0/i5mgP5gg="></script>
+    nonce="JpgOHLEyK12TMnseD/9ltq4JzvGxQmWlskrh3E6MuZc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -153,7 +155,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1081912/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               35
@@ -168,14 +170,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1081912/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               35
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
