--- a/VRChat/61/1081861.html
+++ b/VRChat/61/1081861.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "Ibl5KPHtXI/9w9WgIexwujG87tjTC7jAYvsCdjJn9H8="></script>
+    "III5AsPnoVM2ZditsC0RomyjbqaAUrd6vyjEYQYEKYo="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat向け　もちだいふくアイス","description":"VRchat向けアクセサリ：もちだいふくアイス（もちひよこバージョン）\nポリゴン数4386のFBXファイルと\nテクスチャが入っております\n\n「パッケージ」のメッシュはシェイプキーが入っており、上図のように半分開きます\n\n画像の状態は「Cubeds-Unity-Shaders」を使っています\n\nもちひよこ様に配布の許可をいただいております、悪意のある使用方法はお止めください","url":"https://booth.pm/ja/items/1081861","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/eaae416f-80ca-4582-baa6-17cd5c7d41ab/i/1081861/4cfabcbf-2638-4ba2-bf52-76dc52f16d12_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Ibl5KPHtXI/9w9WgIexwujG87tjTC7jAYvsCdjJn9H8="></script>
+    nonce="III5AsPnoVM2ZditsC0RomyjbqaAUrd6vyjEYQYEKYo="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1081861/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               430
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1081861/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               430
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
