--- a/VRChat/16/1079816.html
+++ b/VRChat/16/1079816.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "iYpZXvMrLL7goa77TnyboWPV9pDuH9rAWZAGQv0QK24="></script>
+    "UhbypnFLv7sb46LTmiOf1hoCJrjFqz/QEGK6hkheKl4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"スキットル","description":"『スキットル』\n\nVRchat用ですが特に用途の制限はないので\n下記を参考にご自由にお使いください。\n\nお酒とか入れて飲む。\n蓋にボーンが入ってるので開けたり閉めたりできる。\n\nFANBOX500円プラン「400円以下のもの使い放題」プランの対象商品となります。\n\n\tNormal.png : ノーマルマップです。ノーマルマップに対応したシェーダーに入れると質感が出ます。\n\tMetallicSmoothness.png : メタリックラフネスマップです。メタリックラフネスマップに対応したシェーダーに入れると質感が出ます。\n\n作者詐称：不可\n改変：可\n商用利用；可\n再配布：不可\nアバターやワールドへの同梱：可\n\n----------------------\n\n更新履歴\n\n2018/11/04 リリース\n\n----------------------\n\n作成・配布者　siodome0","url":"https://booth.pm/ja/items/1079816","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/55d0b3cd-8d44-43f0-8467-7e99fcc0d318/i/1079816/88848015-60d1-44ca-a804-65eb4d79ca5d_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="iYpZXvMrLL7goa77TnyboWPV9pDuH9rAWZAGQv0QK24="></script>
+    nonce="UhbypnFLv7sb46LTmiOf1hoCJrjFqz/QEGK6hkheKl4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -113,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -156,7 +158,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1079816/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               55
@@ -171,14 +173,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1079816/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               55
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
